LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/es/browser.json
+++ b/server/locales/es/browser.json
@@ -45,6 +45,16 @@
     "videosupportedtitle": "Los siguientes están soportados:",
     "videotitle": "Insertar Video"
   },
+  "history": {
+    "pastversions": "Versiones Previas",
+    "timestamp": "Marca de tiempo",
+    "author": "Autor",
+    "commit": "Commit",
+    "comparewith": "Comparar con...",
+    "view": "Ver",
+    "reverttoversion": "Volver a la Versión",
+    "sidebyside": "Vista lado a lado"
+  },
   "modal": {
     "abort": "Abortar",
     "anchorerror": "Falló la copia del Portapapeles. Copie la URL manualmente.",
