--- a/server/locales/ko/browser.json
+++ b/server/locales/ko/browser.json
@@ -1,6 +1,108 @@
 {
+  "editor": {
+    "codeblockinsert": "코드 블록 삽입",
+    "codeblocklanguage": "언어",
+    "codeblockloading": "{{name}} 코드 문법 로딩중",
+    "codeblockloadingerror": "오류; 언어 문법을 가져오지 못했습니다",
+    "codeblocksuccess": "코드 블록이 삽입되었습니다",
+    "codeblocktitle": "코드 블록 삽입",
+    "discard": "취소",
+    "filedeleteaction": "삭제",
+    "filedeleteloading": "파일 삭제 중..",
+    "filedeletedefault": "이 파일",
+    "filedeletesuccess": "파일이 성공적으로 삭제되었습니다.",
+    "fileerror": "업데이트된 목록을 가져올 수 없습니다.",
+    "filefolderempty": "이 폴더는 비어 있습니다.",
+    "fileinsert": "파일에 링크 삽입",
+    "fileloading": "파일을 불러오는중..",
+    "filemoveaction": "로 이동...",
+    "filemoveerror": "이동 실패 : {{err}}",
+    "filemoveloading": "파일 이동 중...",
+    "filemovesuccess": "파일을 성공적으로 이동했습니다.",
+    "fileprocessing": "처리중...",
+    "filerenameaction": "이름 바꾸기",
+    "filesuccess": "파일 링크가 삽입되었습니다.",
+    "filetitle": "파일 삽입",
+    "fileupload": "파일 업로드",
+    "fileuploaderror": "업로드 실패 : {{err}}",
+    "fileuploadsuccess": "파일이 성공적으로 업로드되었습니다.",
+    "folders": "폴더",
+    "foldersloading": "폴더 목록을 불러 오는 중...",
+    "imagetitle": "이미지 삽입",
+    "imageinsert": "이미지 삽입",
+    "imagesuccess": "이미지가 삽입되었습니다.",
+    "imageupload": "이미지 업로드",
+    "imagealignleft": "왼쪽 (기본)",
+    "imagealigncenter": "가운데",
+    "imagealignright": "오른쪽",
+    "imagealignlogo": "Page Logo",
+    "newfolder": "새 폴더",
+    "videoanymp4file": "표준 .MP4 파일",
+    "videoinsert": "영상 삽입",
+    "videolinktitle": "삽입할 영상의 링크를 입력하세요:",
+    "videonotsupported": "URL이 유효하지 않거나 지원되지 않는 형식입니다",
+    "videosuccess": "비디오 코드가 삽입되었습니다",
+    "videosupportedtitle": "아래 항목을 지원합니다:",
+    "videotitle": "영상 삽입"
+  },
+  "history": {
+    "pastversions": "지난 버전들",
+    "timestamp": "생성일",
+    "author": "작성자",
+    "commit": "변경ID",
+    "comparewith": "비교하기",
+    "view": "시각화",
+    "reverttoversion": "이전 버전으로 되돌리기",
+    "sidebyside": "나란히보기"
+  },
   "modal": {
-    "move": "이동"
+    "abort": "중단",
+    "anchorerror": "클립보드 복사 실패. 수동으로 URL을 복사하십시오.",
+    "anchorsuccess": "URL이 클립보드에 복사되었습니다.",
+    "anchortitle": "이 섹션에 링크 복사",
+    "copyclipboard": "클립보드에 복사",
+    "create": "추가",
+    "createpageinvalid": "페이지 경로가 유효하지 않습니다",
+    "createpagepath": "새 페이지의 경로를 입력하세요:",
+    "createpagetitle": "새 페이지 생성",
+    "createuser": "사용자 생성",
+    "createuserauthorize": "사용자 승인",
+    "createuseremail": "이메일 주소",
+    "createuseremailplaceholder": "예: john.doe@company.com",
+    "createusername": "성명",
+    "createusernameplaceholder": "예: 홍길동",
+    "createuserpassword": "비밀번호:",
+    "createuserprovider": "제공자:",
+    "createusertitle": "사용자 계정 생성 / 승인",
+    "delete": "삭제",
+    "deletefiletitle": "삭제하시겠습니까?",
+    "deletefilewarn": "정말로 삭제하시겠습니까?",
+    "deleteusertitle": "계정을 삭제하시겠습니까?",
+    "deleteuserwarning": "정말로 삭제하시겠습니까? 이 작업은 복구할 수 없습니다",
+    "discard": "취소",
+    "discardpagecreate": "지금까지 작성한 내용을 저장하지 않고 나가겠습니까?",
+    "discardpageedit": "변경 사항을 저장하지 않고 나가시겠습니까? ",
+    "discardpagestay": "페이지에 머무르기",
+    "discardpagetitle": "취소하시겠습니까?",
+    "move": "이동",
+    "movepageinvalid": "페이지 경로가 잘못되었거나 페이지 접근 권한이 없습니다",
+    "movepagepath": "새로운 페이지 경로 등록",
+    "movepageplaceholder": "페이지 이름",
+    "movepagetitle": "페이지 이동",
+    "movepagewarning": "페이지를 이동하거나 이름을 변경하면 해당 페이지를 참조하는 다른 페이지의 링크를 꼭 수정하세요!",
+    "newfolderinvalid": "폴더 이름이 유효하지 않습니다",
+    "newfolderloading": "새 폴더 생성 중...",
+    "newfoldername": "새로 만들 폴더의 이름을 입력하세요:",
+    "newfoldernameplaceholder": "폴더명",
+    "newfoldersuccess": "{{name}} 폴더 생성 완료",
+    "newfoldertitle": "새 폴더",
+    "renamefile": "이름 바꾸기",
+    "renamefileerror": "이름 바꾸기 실패 : {{err}}",
+    "renamefileinvalid": "파일 이름이 유효하지 않습니다",
+    "renamefileloading": "파일 이름 변경 중...",
+    "renamefilename": "새로운 파일명(확장자 없이)을 입력하세요",
+    "renamefilenameplaceholder": "파일명",
+    "renamefiletitle": "파일 이름 바꾸기"
   },
   "nav": {
     "home": "홈으로"
