--- a/server/locales/ko/common.json
+++ b/server/locales/ko/common.json
@@ -27,11 +27,15 @@
     "move": "이동",
     "myprofile": "내 프로필",
     "normalview": "기본 보기",
+    "root": "홈으로",
     "savechanges": "변경사항 저장",
     "savedocument": "문서 저장",
+    "settings": "설정",
     "source": "소스",
     "stats": "통계",
+    "sysinfo": "시스템 정보",
     "syssettings": "시스템 설정",
+    "theme": "색상 테마",
     "users": "사용자",
     "viewlatest": "최신 보기"
   },
