--- a/server/locales/nl/common.json
+++ b/server/locales/nl/common.json
@@ -28,7 +28,7 @@
     "myprofile": "Profiel",
     "normalview": "Normaal uiterlijk",
     "root": "Home",
-    "savechanges": "Veranderingen opslaan",
+    "savechanges": "Opslaan",
     "savedocument": "Document opslaan",
     "settings": "Instellingen",
     "source": "Paginabron",
