--- a/server/locales/de/common.json
+++ b/server/locales/de/common.json
@@ -7,7 +7,8 @@
   "footer": {
     "poweredby": "Unterstützt von",
     "home": "Startseite",
-    "top": "Nach oben"
+    "top": "Nach oben",
+    "imprint":"Impressum"
   },
   "sidebar": {
     "nav": "NAV",
