Finish Japanese translation

--- a/server/locales/ja/browser.json
+++ b/server/locales/ja/browser.json
@@ -1,118 +1,117 @@
 {
   "editor": {
-    "codeblockinsert": "Insert Code Block",
-    "codeblocklanguage": "Language",
-    "codeblockloading": "Loading code syntax for {{name}}",
-    "codeblockloadingerror": "Error: Unable to load language syntax.",
-    "codeblocksuccess": "Your code block has been inserted.",
-    "codeblocktitle": "Insert Code Block",
-    "discard": "Discard",
-    "filedeleteaction": "Delete",
-    "filedeleteloading": "Deleting file...",
-    "filedeletedefault": "this file",
-    "filedeletesuccess": "File deleted successfully.",
-    "fileerror": "Unable to fetch updated listing.",
-    "filefolderempty": "This folder is empty.",
-    "fileinsert": "Insert Link to File",
-    "fileloading": "Fetching files...",
-    "filemoveaction": "Move to...",
-    "filemoveerror": "Move error: {{err}}",
-    "filemoveloading": "Moving file...",
-    "filemovesuccess": "File moved successfully.",
-    "fileprocessing": "Processing...",
-    "filerenameaction": "Rename",
-    "filesuccess": "File link has been inserted.",
-    "filetitle": "Insert File",
-    "fileupload": "Upload File(s)",
-    "fileuploaderror": "Upload Error: {{err}}",
-    "fileuploadsuccess": "File(s) uploaded successfully.",
-    "folders": "Folders",
-    "foldersloading": "Fetching folders list...",
-    "imagetitle": "Insert Image",
-    "imageinsert": "Insert Image",
-    "imagesuccess": "Image has been inserted.",
-    "imageupload": "Upload Image(s)",
-    "imagealignleft": "Left (default)",
-    "imagealigncenter": "Centered",
-    "imagealignright": "Right",
-    "imagealignlogo": "Page Logo",
-    "newfolder": "New Folder",
-    "videoanymp4file": "Any standard MP4 file",
-    "videoinsert": "Insert Video",
-    "videolinktitle": "Enter the link to the video to be embedded:",
-    "videonotsupported": "This URL is invalid or not supported!",
-    "videosuccess": "The video code has been inserted.",
-    "videosupportedtitle": "The following are supported:",
-    "videotitle": "Insert Video"
+    "codeblockinsert": "コードブロックを挿入する",
+    "codeblocklanguage": "言語",
+    "codeblockloading": "{{name}}言語の構文を読み込み中",
+    "codeblockloadingerror": "エラー：言語の構文を読み込めません。",
+    "codeblocksuccess": "コードブロックが挿入されました。",
+    "codeblocktitle": "コードブロックを挿入する",
+    "discard": "キャンセル",
+    "filedeleteaction": "削除",
+    "filedeleteloading": "ファイルを削除中...",
+    "filedeletedefault": "このファイル",
+    "filedeletesuccess": "ファイルが削除されました。",
+    "fileerror": "更新されたリスティングを読み込むことはできませんでした。",
+    "filefolderempty": "このフォルダは空いています。",
+    "fileinsert": "ファイルのリンクを挿入する",
+    "fileloading": "ファイルを読み込み中...",
+    "filemoveaction": "移動...",
+    "filemoveerror": "移動エラー：{{err}}",
+    "filemoveloading": "ファイルを移動中...",
+    "filemovesuccess": "ファイルが移動されました。",
+    "fileprocessing": "処理中...",
+    "filerenameaction": "名称の変更",
+    "filesuccess": "ファイルリンクが挿入されました。",
+    "filetitle": "ファイルを挿入する",
+    "fileupload": "ファイルをアップロードする",
+    "fileuploaderror": "アップロードエラー：{{err}}",
+    "fileuploadsuccess": "ファイルがアップロードされました。",
+    "folders": "フォルダ",
+    "foldersloading": "フォルダリストを読み込み中...",
+    "imagetitle": "画像を挿入する",
+    "imageinsert": "画像を挿入する",
+    "imagesuccess": "画像が挿入されました。",
+    "imageupload": "画像をアップロードする",
+    "imagealignleft": "左（デフォルト）",
+    "imagealigncenter": "中",
+    "imagealignright": "右",
+    "imagealignlogo": "ページロゴ",
+    "newfolder": "新しいフォルダ",
+    "videoanymp4file": "標準MP4ファイル",
+    "videoinsert": "ビデオを挿入する",
+    "videolinktitle": "埋め込むビデオへのリンクを入力してください：",
+    "videonotsupported": "このURLは無効かサポートされていません。",
+    "videosuccess": "ビデオコードが挿入されました。",
+    "videosupportedtitle": "以下がサポートされています：",
+    "videotitle": "ビデオを挿入する"
   },
   "history": {
-    "pastversions": "Past Versions",
-    "timestamp": "Timestamp",
-    "author": "Author",
-    "commit": "Commit",
-    "comparewith": "Compare With...",
-    "view": "View",
-    "reverttoversion": "Revert to Version",
-    "sidebyside": "Side-by-side View"
+    "pastversions": "過去のバージョン",
+    "timestamp": "タイムスタンプ",
+    "author": "著者",
+    "commit": "コミット",
+    "comparewith": "比べる...",
+    "view": "見る",
+    "reverttoversion": "バージョンに戻す",
+    "sidebyside": "サイドバイサイド画面"
   },
   "modal": {
-    "abort": "Abort",
-    "anchorerror": "Clipboard copy failed. Copy the URL manually.",
-    "anchorsuccess": "The URL has been copied to your clipboard.",
-    "anchortitle": "Copy link to this section",
-    "copyclipboard": "Copy to Clipboard",
-    "create": "Create",
-    "createpageinvalid": "This page path is invalid!",
-    "createpagepath": "Enter the new page path:",
-    "createpagetitle": "Create New Page",
-    "createuser": "Create User",
-    "createuserauthorize": "Authorize User",
-    "createuseremail": "Email address:",
-    "createuseremailplaceholder": "e.g. john.doe@company.com",
-    "createusername": "Full Name:",
-    "createusernameplaceholder": "e.g. John Doe",
-    "createuserpassword": "Password:",
-    "createuserprovider": "Provider:",
-    "createusertitle": "Create / Authorize User",
+    "abort": "中止する",
+    "anchorerror": "クリップボードからのコピーが失敗しました。手動でURLをコピーしてください。",
+    "anchorsuccess": "URLがクリップボードにコピーされました。",
+    "anchortitle": "このセクションへのリンクをコピーする",
+    "copyclipboard": "クリップボードにコピーする",
+    "create": "作成",
+    "createpageinvalid": "ページパスは無効です。",
+    "createpagepath": "新しいページパスを入力してください：",
+    "createpagetitle": "新しいページを作成する",
+    "createuser": "ユーザーを作成する",
+    "createuserauthorize": "ユーザーを承認する",
+    "createuseremail": "Eメール：",
+    "createuseremailplaceholder": "例：taro.yamada@company.com",
+    "createusername": "名前：",
+    "createusernameplaceholder": "例：山田　太郎",
+    "createuserpassword": "パスポート：",
+    "createuserprovider": "プロバイダ：",
+    "createusertitle": "ユーザーを作成・承認する",
     "delete": "削除",
     "deletefiletitle": "を削除する？",
     "deletefilewarn": "本当に削除しますか？",
-    "deletepagewarning": "Are you sure you want to delete this page? This action cannot be undone!",
-    "deletepagetitle": "Delete this page?",
-    "deleteusertitle": "Delete User Account?",
-    "deleteuserwarning": "Are you sure you want to delete this user account? This action cannot be undone!",
-    "discard": "Discard",
-    "discardpagecreate": "Are you sure you want to leave this page and lose anything you wrote so far?",
-    "discardpageedit": "Are you sure you want to leave this page and lose any modifications?",
-    "discardpagestay": "Stay on page",
-    "discardpagetitle": "Discard?",
-    "move": "Move",
-    "movepageinvalid": "This page path is invalid or not allowed!",
-    "movepagepath": "Enter the new page path:",
+    "deletepagewarning": "本当にこのページを削除しますか？この操作は元に戻すことはできません！",
+    "deletepagetitle": "このページを削除しますか？",
+    "deleteusertitle": "ユーザーアカウントの削除しますか？",
+    "deleteuserwarning": "本当にこのユーザーアカウントを削除しますか？この操作は元に戻すことはできません！",
+    "discard": "キャンセル",
+    "discardpagecreate": "本当にこのページを離れますか？これまでの書いたものは失われます！",
+    "discardpageedit": "本当にこのページを離れますか？これまでの変更は失われます！",
+    "discardpagestay": "ページに留まる",
+    "discardpagetitle": "キャンセル？",
+    "move": "移動する",
+    "movepageinvalid": "このページパスは無効又は許可されていません。",
+    "movepagepath": "新しいページパスを入力してください：",
     "movepageplaceholder": "page-name",
-    "movepagetitle": "Move Page",
-    "movepagewarning": "Note that moving or renaming pages can lead to broken links. Make sure to edit any page that links to this page afterwards!",
-    "newfolderinvalid": "This folder name is invalid!",
-    "newfolderloading": "Creating new folder...",
-    "newfoldername": "Enter the new folder name:",
-    "newfoldernameplaceholder": "folder name",
-    "newfoldersuccess": "New folder {{name}} created.",
-    "newfoldertitle": "New Folder",
-    "renamefile": "Rename",
-    "renamefileerror": "Rename error: {{err}}",
-    "renamefileinvalid": "This filename is invalid!",
-    "renamefileloading": "Renaming file...",
-    "renamefilename": "Enter the new filename (without the extension) of the file:",
-    "renamefilenameplaceholder": "filename",
-    "renamefiletitle": "Rename File"
+    "movepagetitle": "ページを移動する",
+    "movepagewarning": "ページを移動又はページ名を変更する場合、リンクが壊れる可能性があります。その後、このページにリンクしているページは必ず編集してください。",
+    "newfolderloading": "新しいフォルダを作成中...",
+    "newfoldername": "新しいフォルダ名を入力してください：",
+    "newfoldernameplaceholder": "folder-name",
+    "newfoldersuccess": "新しいフォルダ{{name}}が作成されました。",
+    "newfoldertitle": "新しいフォルダ",
+    "renamefile": "ファイル名を変更する",
+    "renamefileerror": "ファイル名の変更エラー：{{err}}",
+    "renamefileinvalid": "ファイル名は無効です",
+    "renamefileloading": "ファイル名を変更中...",
+    "renamefilename": "新しいファイル名（拡張子なし）を入力してください：",
+    "renamefilenameplaceholder": "ファイル名",
+    "renamefiletitle": "ファイルの名前を変更する"
   },
   "nav": {
     "home": "ホーム"
   },
   "search": {
-    "didyoumean": "Did you mean...?",
-    "nomatch": "No results matching your query",
-    "placeholder": "Search...",
-    "results": "Search Results"
+    "didyoumean": "もしかして...?",
+    "nomatch": "一致する結果はありません",
+    "placeholder": "検査...",
+    "results": "検査結果"
   }
 }
