--- a/server/locales/ja/common.json
+++ b/server/locales/ja/common.json
@@ -35,7 +35,7 @@
     "stats": "統計",
     "sysinfo": "システム内容",
     "syssettings": "システム設定",
-    "theme": "カラーテーマ",
+    "theme": "テーマ",
     "users": "ユーザー",
     "viewlatest": "最新を見る"
   },
