fix: locale ja auth typo

--- a/server/locales/ja/auth.json
+++ b/server/locales/ja/auth.json
@@ -13,7 +13,7 @@
     "invalidlogin": "不正なログイン",
     "invalidloginmsg": "Eメール又はパスワードが無効です。",
     "invaliduseremail": "無効なユーザーEメール",
-    "lognerror": "ログインエラー",
+    "loginerror": "ログインエラー",
     "notyetauthorized": "まだこのサイトにログインする権限がありません。",
     "toomanyattempts": "試行回数が多すぎます",
     "toomanyattemptsmsg": "短期間に失敗した試行回数が多すぎます。{{time}}にもう一度お試しください。",
