--- a/server/locales/de/common.json
+++ b/server/locales/de/common.json
@@ -31,8 +31,9 @@
     "savechanges": "Änderungen speichern",
     "savedocument": "Dokument speichern",
     "settings": "Einstellungen",
-    "source": "Quelle",
-    "stats": "Statistik",
+    "source": "Quellcode",
+    "stats": "Statistiken",
+    "sysinfo": "Systeminformation",
     "syssettings": "Systemeinstellungen",
     "theme": "Farbschema",
     "users": "Benutzer",
