--- a/server/locales/de/errors.json
+++ b/server/locales/de/errors.json
@@ -9,11 +9,11 @@
   "invaliddestfolder": "Ungültiger Zielordner!",
   "invalidfiletype": "Ungültiger Dateityp.",
   "invalidfolder": "Ungültiger Ordner.",
-  "invalidoperation": "Ungültige Operation.",
+  "invalidoperation": "Ungültige Operation!",
   "invalidpath": "Ungültiger Dateipfad.",
   "invaliduserid": "Ungültige User ID",
   "newpasswordtooshort": "Das neue Passwort ist zu kurz!",
-  "notexist": "Der Eintrag {{path}} existiert nicht.",
+  "notexist": "Der Eintrag {{path}} existiert nicht!",
   "notexistdetail": "Willst du diesen Eintrag erstellen?",
   "parentinvalid": "Der übergeordnete Eintrag ist keine gültige Datei.",
   "parentisroot": "Der übergeordnete Eintrag ist die Wurzel.",
