--- a/server/locales/de/admin.json
+++ b/server/locales/de/admin.json
@@ -9,7 +9,12 @@
     "passwordverify": "Passwort bestätigen",
     "provider": "Anbieter",
     "savechanges": "Änderungen speichern",
-    "subtitle": "Profil und Authentifizierunginformationen"
+    "subtitle": "Profil und Authentifizierungsinformationen",
+    "tfa": "Two-Factor Authentifizierung",
+    "tfadisable": "Deaktiviere 2FA",
+    "tfadisabled": "Deaktiviere",
+    "tfaenable": "Aktiviere 2FA",
+    "tfaenabled": "Aktiviere"
   },
   "stats": {
     "subtitle": "Allgemeine seitenweite Statistik",
@@ -21,6 +26,7 @@
     "subtitle": "Verwalte Seitenkonfiguration"
   },
   "system": {
+    "subtitle": "Informationen und Werkzeuge für dein Wiki",
     "systemversion": "Systemversion",
     "currentversion": "Aktuelle Version",
     "latestversion": "Letzte Version",
@@ -30,13 +36,36 @@
     "administrativetools": "Administrationswerkzeuge",
     "flushcache": "Leere Cache und rekonstruiere Indexes",
     "flushcachetext": "Falls Inhalts- oder Suchergebnisse veraltet wirken oder nicht den letzten Inhalt enthalten hilft es den Cache zu leeren.",
-    "flushcachebtn": "Leere und baue erneut",
+    "flushcachebtn": "Leeren und erneut bauen",
     "resetaccounts": "Setze Systemaccounts auf Standard zurück",
-    "resetaccountstext": "Die Systemaccount (wie den Gästeaccount) werden zu den Standardeinstellungen zurückgesetzt.",
+    "resetaccountstext": "Die Systemaccounts (wie den Gästeaccount) werden zu den Standardeinstellungen zurückgesetzt.",
     "resetaccountsbtn": "Setze Sytemaccounts zurück",
-    "flushsessions": "Leere alle aktiven Benutersitzungen",
+    "flushsessions": "Leere alle aktiven Benutzersitzungen",
     "flushsessionstext": "Alle Benutzer werden ausgeloggt und müssen sich erneut anmelden. Deine jetzige Sitzung ist davon ebenfalls betroffen!",
-    "flushsessionsbtn": "Leere Sitzungen"
+    "flushsessionsbtn": "Leere Sitzungen",
+    "hostinfo": "Host Informationen",
+    "os": "Betriebssystem",
+    "nodeversion": "Node.js Version",
+    "hostname": "Hostname",
+    "cores": "CPU Kerne",
+    "totalmem": "Gesamtspeicher",
+    "cwd": "Arbeitsverzeichnis"
+  },
+  "theme": {
+    "subtitle": "Ändere das Erscheinungsbild deines Wiki",
+    "primarycolor": "Primäre Farbe",
+    "primarycolordesc": "Wird für die obere Navigationsleiste, Header, Links usw. verwendet",
+    "altcolor": "Alternative Farbe",
+    "altcolordesc": "Wird für die Seitenleiste benutzt (in einem dunkleren Ton)",
+    "footercolor": "Farbe der Fußzeile",
+    "footercolordesc": "Wird für die Fußzeile benutzt (in einem helleren Ton)",
+    "codeblock": {
+      "title": "Code-Blöcke",
+      "dark": "Benutze ein Dunkles Theme",
+      "colorize": "Eingefärbte Code-Syntax"
+    },
+    "savechanges": "Änderungen speichern",
+    "reset": "Auf Standard zurücksetzen"
   },
   "users": {
     "createauthorize": "Erstelle / Autorisiere Benutzer",
@@ -46,7 +75,7 @@
     "provider": "Anbieter",
     "createdon": "Erstellt am",
     "updatedon": "Geändert am",
-    "returntousers": "Zurück zu Benutzern",
+    "returntousers": "Zurück zum Benutzer",
     "edituser": "Benutzer bearbeiten",
     "uniqueid": "Einmalige ID"
   }
