--- a/server/locales/de/git.json
+++ b/server/locales/de/git.json
@@ -1,6 +1,6 @@
 {
   "added": "{{path}} hinzugefügt",
-  "deleted": "Gelöscht/Umbenannt: {{path}}",
+  "deleted": "{{path}} gelöscht/umbenannt",
   "updated": "{{path}} geändert",
   "uploaded": "{{path}} hochgeladen."
 }
