--- a/server/locales/ja/admin.json
+++ b/server/locales/ja/admin.json
@@ -22,7 +22,7 @@
     "uploads": "アップロード",
     "users": "ユーザー"
   },
-  "setings": {
+  "settings": {
     "subtitle": "サイト設定を管理する"
   },
   "system": {
