--- a/server/locales/ko/browser.json
+++ b/server/locales/ko/browser.json
@@ -77,6 +77,8 @@
     "delete": "삭제",
     "deletefiletitle": "삭제하시겠습니까?",
     "deletefilewarn": "정말로 삭제하시겠습니까?",
+    "deletepagewarning": "정말로 페이지를 삭제하시겠습니까? 이 작업은 복귀할 수 없습니다",
+    "deletepagetitle": "페이지를 삭제하시겠습니까?",
     "deleteusertitle": "계정을 삭제하시겠습니까?",
     "deleteuserwarning": "정말로 삭제하시겠습니까? 이 작업은 복구할 수 없습니다",
     "discard": "취소",
