--- a/server/locales/ja/browser.json
+++ b/server/locales/ja/browser.json
@@ -71,7 +71,7 @@
     "createuseremailplaceholder": "例：taro.yamada@company.com",
     "createusername": "名前：",
     "createusernameplaceholder": "例：山田　太郎",
-    "createuserpassword": "パスポート：",
+    "createuserpassword": "パスワード：",
     "createuserprovider": "プロバイダ：",
     "createusertitle": "ユーザーを作成・承認する",
     "delete": "削除",
