fix: Japanese translation

--- a/server/locales/ja/common.json
+++ b/server/locales/ja/common.json
@@ -26,21 +26,21 @@
     "logout": "ログアウト",
     "move": "移動",
     "myprofile": "マイページ",
-    "normalview": "普通の画面",
+    "normalview": "通常画面",
     "root": "ホーム",
     "savechanges": "保存する",
     "savedocument": "記事を保存する",
     "settings": "設定",
     "source": "ソースコード",
     "stats": "統計",
-    "sysinfo": "システム内容",
+    "sysinfo": "システム情報",
     "syssettings": "システム設定",
     "theme": "テーマ",
     "users": "ユーザー",
     "viewlatest": "最新を見る"
   },
   "welcome": {
-    "title": "Wikiへよこそ！",
+    "title": "Wikiへようこそ！",
     "subtitle": "ます、ホームページを作りましょう。",
     "createhome": "ホームページの作成"
   },
