--- a/server/locales/en/auth.json
+++ b/server/locales/en/auth.json
@@ -27,7 +27,7 @@
     "facebook": "Facebook",
     "github": "GitHub",
     "slack": "Slack",
-    "ldap": "LDAP / Active Directory"
+    "ldap": "LDAP / Active Directory",
     "oauth2": "OAuth2"
   }
 }
