--- a/server/locales/ru/common.json
+++ b/server/locales/ru/common.json
@@ -10,7 +10,7 @@
     "top": "Вернуться к началу"
   },
   "sidebar": {
-    "nav": "Ни какого значения не дабавлено",
+    "nav": "Никакого значения не добавлено",
     "navigation": "Навигация",
     "pagecontents": "Содержание страницы",
     "pastversions": "Предыдущие версии"
