Added OpenID Connect support

--- a/server/locales/en/auth.json
+++ b/server/locales/en/auth.json
@@ -28,6 +28,7 @@
     "github": "GitHub",
     "slack": "Slack",
     "ldap": "LDAP / Active Directory",
-    "oauth2": "OAuth2"
+    "oauth2": "OAuth2",
+    "oidc": "OpenID Connect"
   }
 }
