Added new entries and corrected existing ones in Russian localization

--- a/server/locales/ru/auth.json
+++ b/server/locales/ru/auth.json
@@ -1,5 +1,5 @@
 {
-  "loginrequired": "Требуется войти",
+  "loginrequired": "Требуется войти в систему",
   "loginusing": "Вход при помощи ...",
   "loginusingalt": "Или войдите в систему, используя ...",
   "fields": {
@@ -11,12 +11,12 @@
   },
   "errors": {
     "invalidlogin": "Неверный логин",
-    "invalidloginmsg": "Не правильный Е-маил или Пароль ",
-    "invaliduseremail": "Недействительный адрес электронной почты пользователя",
+    "invalidloginmsg": "Неправильный Е-маил или Пароль",
+    "invaliduseremail": "Неверный адрес электронной почты пользователя",
     "loginerror": "Ошибка входа",
-    "notyetauthorized": "Вы не были  еще Авторизованны",
+    "notyetauthorized": "Вы не были еще авторизованны",
     "toomanyattempts": "Слишком много попыток!",
-    "toomanyattemptsmsg": "Вы сделали слишком много неудачных попыток за короткий период времени.Пожалуйста попробуйте снова  {{time}}. ",
+    "toomanyattemptsmsg": "Вы сделали слишком много неудачных попыток за короткий период времени, пожалуйста, попробуйте снова  {{time}}. ",
     "usernotfound": "Пользователь не найден"
   },
   "providers": {
@@ -27,6 +27,8 @@
     "facebook": "Авторизация при помощи аккаунта Facebook",
     "github": "Авторизация при помощи аккаунта GitHub",
     "slack": "Авторизация при помощи аккаунта Stack",
-    "ldap": "Авторизация при помощи аккаунта LDAP / Active Directory"
+    "ldap": "Авторизация при помощи аккаунта LDAP / Active Directory",
+    "oauth2": "Авторизация при помощи OAuth2",
+    "oidc": "Авторизация при помощи OpenID Connect"
   }
 }
