--- a/server/locales/ru/browser.json
+++ b/server/locales/ru/browser.json
@@ -1,4 +1,112 @@
 {
+  "editor": {
+    "codeblockinsert": "Вставить блок кода",
+    "codeblocklanguage": "Язык программирования",
+    "codeblockloading": "Загрузка синтаксиса для языка {{name}}",
+    "codeblockloadingerror": "Ошибка при загрузке синтаксиса",
+    "codeblocksuccess": "Ваш блок кода вставлен.",
+    "codeblocktitle": "Вставить блок кода",
+    "discard": "Сброс",
+    "filedeleteaction": "Удалить",
+    "filedeleteloading": "Удаление файлов...",
+    "filedeletedefault": "этот файл",
+    "filedeletesuccess": "Файл успешно удален.",
+    "fileerror": "Не удалось получить обновления.",
+    "filefolderempty": "Эта папка пуста.",
+    "fileinsert": "Вставить ссылку на файл",
+    "fileloading": "Получение файлов...",
+    "filemoveaction": "Переместить в...",
+    "filemoveerror": "Ошибка перемещения: {{err}}",
+    "filemoveloading": "Перемещение файла...",
+    "filemovesuccess": "Файл перемещен успешно.",
+    "fileprocessing": "обработка...",
+    "filerenameaction": "Переименовать",
+    "filesuccess": "Ссылка на файл вставлена.",
+    "filetitle": "Вставить файл",
+    "fileupload": "Загрузить файл(ы)",
+    "fileuploaderror": "Ошибка загрузки: {{err}}",
+    "fileuploadsuccess": "Файл(ы) загружены успешно.",
+    "folders": "Папки",
+    "foldersloading": "Получение списка файлов...",
+    "imagetitle": "Вставить Изображение",
+    "imageinsert": "Вставить Изображение",
+    "imagesuccess": "Изображение вставлено.",
+    "imageupload": "Загрузить Изображение(я)",
+    "imagealignleft": "Слева (по умолчанию)",
+    "imagealigncenter": "По центру",
+    "imagealignright": "Справа",
+    "imagealignlogo": "Лого страницы",
+    "newfolder": "Новая папка",
+    "videoanymp4file": "Произвольный MP4-файл",
+    "videoinsert": "Вставить видео",
+    "videolinktitle": "Вставьте ссылку на видео, которое будет встроено:",
+    "videonotsupported": "Эта ссылка некорректна или более недействительна!",
+    "videosuccess": "Видео было вставлено.",
+    "videosupportedtitle": "Поддерживаются следующие:",
+    "videotitle": "Вставить видео"
+  },
+  "history": {
+    "pastversions": "Последняя версия",
+    "timestamp": "Время",
+    "author": "Автор",
+    "commit": "Коммит",
+    "comparewith": "Сравнить с ...",
+    "view": "Вид",
+    "reverttoversion": "Вернуть к версии",
+    "sidebyside": "Разбить содержимое окна"
+  },
+  "modal": {
+    "abort": "Отменить",
+    "anchorerror": "Копирование в буфер обмена не удалось. Скопируйте URL самостоятельно.",
+    "anchorsuccess": "Эта ссылка успешно скопирована в буфер обмена.",
+    "anchortitle": "Скопировать ссылку на этоу секцию",
+    "copyclipboard": "Скопировать в буфер обмена",
+    "create": "Создать",
+    "createpageinvalid": "Этот путь к странице некорректен!",
+    "createpagepath": "Введите новый путь к странице:",
+    "createpagetitle": "Создать новую страницу",
+    "createuser": "Создать пользователя",
+    "createuserauthorize": "Пользовательская авторизация",
+    "createuseremail": "E-mail:",
+    "createuseremailplaceholder": "Например: john.doe@company.com",
+    "createusername": "Имя Фамилия:",
+    "createusernameplaceholder": "Например: John Doe",
+    "createuserpassword": "Пароль:",
+    "createuserprovider": "Провайдер:",
+    "createusertitle": "Создать / Авторизовать Пользователя",
+    "delete": "Удалить",
+    "deletefiletitle": "Удалить?",
+    "deletefilewarn": "Вы уверены, что хотите удалить?",
+    "deletepagewarning": "Вы уверены, что хотите удалить эту страницу? Это действие необратимо!",
+    "deletepagetitle": "Удалить эту страницу?",
+    "deleteusertitle": "Удалить аккаунт пользователя?",
+    "deleteuserwarning": "Вы уверены, что хотите удалить этот аккаунт? Это действие необратимо!",
+    "discard": "Сброс",
+    "discardpagecreate": "Вы уверены, что хотите уйти с этой страницу и утерять все данные?",
+    "discardpageedit": "Вы уверены, что хотите уйти с этой страницу и утерять все изменения?",
+    "discardpagestay": "Остаться на странице",
+    "discardpagetitle": "Сброс?",
+    "move": "Переместить",
+    "movepageinvalid": "Эта страница больше не существует!",
+    "movepagepath": "Введите новый путь к странице:",
+    "movepageplaceholder": "Заголовок",
+    "movepagetitle": "Переместить страницу",
+    "movepagewarning": "Перемещение или Переименование страницы может привести к битым ссылкам. Убедитесь, что отредектированы все страницы, которые ссылаются на эту!",
+    "movepagewarning": "Note that moving or renaming pages can lead to broken links. Make sure to edit any page that links to this page afterwards!",
+    "newfolderinvalid": "Это имя папки некорректно!",
+    "newfolderloading": "Создать новую папку...",
+    "newfoldername": "Введите новое имя папки:",
+    "newfoldernameplaceholder": "Имя Папки",
+    "newfoldersuccess": "Новая папка {{name}} создана.",
+    "newfoldertitle": "Новая Папка",
+    "renamefile": "Переименовать",
+    "renamefileerror": "Ошибка переименования: {{err}}",
+    "renamefileinvalid": "Имя имя некорректно!",
+    "renamefileloading": "Переименование файла...",
+    "renamefilename": "Введите новое имя (без расширения) для файла:",
+    "renamefilenameplaceholder": "Имя Файла",
+    "renamefiletitle": "Переименовать файл"
+  },
   "nav": {
     "home": "Главная"
   },
