--- a/server/locales/ru/common.json
+++ b/server/locales/ru/common.json
@@ -10,7 +10,7 @@
     "top": "Вернуться к началу"
   },
   "sidebar": {
-    "nav": "Ни какого значения не дабавлено",
+    "nav": "Ни какого значения не добавлено",
     "navigation": "Навигация",
     "pagecontents": "Содержание страницы",
     "pastversions": "Предыдущие версии"
@@ -26,12 +26,16 @@
     "logout": "Выход",
     "move": "Переместить",
     "myprofile": "Мой профайл",
-    "normalview": "Нормальный Вид",
+    "normalview": "Обычный Вид",
+    "root": "Главная",
     "savechanges": "Сохранить изменения",
     "savedocument": "Сохранить документ",
+    "settings": "Настройки",
     "source": "Источник",
     "stats": "Статистика",
+    "sysinfo": "Системная информация",
     "syssettings": "Настройки системы",
+    "theme": "Цветовая Тема",
     "users": "Пользователи",
     "viewlatest": "Просмотреть последние"
   },
