--- a/server/locales/ru/admin.json
+++ b/server/locales/ru/admin.json
@@ -1,17 +1,23 @@
 {
   "profile": {
-    "displayname": "Отоброжаемое Имя",
-    "displaynameexample": "Джон Смит",
+    "displayname": "Отображаемое Имя",
+    "displaynameexample": "Иван Иванов",
     "email": "Е-маил",
-    "membersince": "Участник с ",
+    "lastprofileupdate": "Последнее обновление профиля",
+    "membersince": "Участник с",
     "password": "Пароль",
-    "passwordverify": "Потвердить Пороль",
+    "passwordverify": "Подтвердить Пароль",
     "provider": "Провайдер",
     "savechanges": "Сохранить изменения ",
-    "subtitle": "Информация о профайле и антификации"
+    "subtitle": "Информация о профайле и аунтификации",
+    "tfa": "Двухфакторная Аутентификация",
+    "tfadisable": "Отключить двухфакторную аутентификацию",
+    "tfadisabled": "Отключена",
+    "tfaenable": "Включить двухфакторную аутентификацию",
+    "tfaenabled": "Включена"
   },
   "stats": {
-    "subtitle": "Общая статистика  по сайту",
+    "subtitle": "Общая статистика по сайту",
     "entries": "Записи",
     "uploads": "Загрузки",
     "users": "Пользователи"
@@ -20,22 +26,46 @@
     "subtitle": "Управление конфигурацией сайта"
   },
   "system": {
+    "subtitle": "Информация и инструменты для Вашей wiki",
     "systemversion": "Версия системы",
     "currentversion": "Текущая версия",
     "latestversion": "Последняя версия",
     "upgrade": "Обновить",
     "reinstall": "Переустановите текущую версию",
     "versioncheckfailed": "Не удалось запросить последнюю версию. Попробуйте позже.",
-    "administrativetools": "Инструменты управления",
+    "administrativetools": "Инструменты администрирования",
     "flushcache": "Очистите кэш и перестройте индексы",
     "flushcachetext": "Если содержание или результаты поиска кажутся устаревшими или не включают в себя последний контент, очистка кэша может помочь решить эти проблемы.",
     "flushcachebtn": "Сброс и восстановление",
-    "resetaccounts": "Сброс системных учетных записей  на значений по умолчанию",
+    "resetaccounts": "Сброс системных учетных записей на значений по умолчанию",
     "resetaccountstext": "Учетные записи системы (например, учетная запись гостя) будут сброшены к настройкам по умолчанию.",
     "resetaccountsbtn": "Сброс системных учетных записей",
     "flushsessions": "Сброс всех активных сеансов пользователя",
-    "flushsessionstext": "Все пользователи будут выброшены из системы. И вынуждены зайти снова. Это также  касаеться вас",
-    "flushsessionsbtn": "Сброс сеансов"
+    "flushsessionstext": "Все пользователи будут разлогинены и вынуждены зайти снова. Ваша сессия будет тоже сброшена!",
+    "flushsessionsbtn": "Сброс сессий",
+    "hostinfo": "Информация о системе",
+    "os": "Операционная система",
+    "nodeversion": "Версия Node.js",
+    "hostname": "Имя хоста",
+    "cores": "Ядра CPU",
+    "totalmem": "Всего памяти",
+    "cwd": "Рабочая папка"
+  },
+  "theme": {
+    "subtitle": "Ихменить внешний вид вашей wiki",
+    "primarycolor": "Основной цвет",
+    "primarycolordesc": "Используется в меню, заголовках, ссылках и т.д.",
+    "altcolor": "Альтернативный цвет",
+    "altcolordesc": "Используется в боковом меню (в темных тонах)",
+    "footercolor": "Цвет footer'a",
+    "footercolordesc": "Используется в footer'e (в светлых тонах)",
+    "codeblock": {
+      "title": "Блок кода",
+      "dark": "Используется темная тема",
+      "colorize": "Цветная подсветка синтаксиса"
+    },
+    "savechanges": "Сохранить изменения",
+    "reset": "Сбросить к настройкам по умолчанию"
   },
   "users": {
     "createauthorize": "Создать / Авторизовать пользователя",
@@ -43,7 +73,7 @@
     "name": "Имя",
     "email": "Адрес электронной почты",
     "provider": "Провайдер",
-    "createdon": "Создано ",
+    "createdon": "Создано",
     "updatedon": "Обновлено",
     "returntousers": "Вернуться в Пользователи",
     "edituser": "Редактировать пользователя",
