--- a/server/locales/ru/errors.json
+++ b/server/locales/ru/errors.json
@@ -1,7 +1,7 @@
 {
   "alreadyexists": "Эта запись уже существует!",
-  "debugmsg": "Подробная отладка",
-  "fileexists": "Файл{{path}} уже существует.",
+  "debugmsg": "Подробная отладочная информация",
+  "fileexists": "Файл {{path}} уже существует.",
   "forbidden": "Запрещено",
   "forbiddendetail": "К сожалению, у вас нет необходимых разрешений на доступ к этой странице.",
   "generic": "Упс! Что-то пошло не так",
@@ -13,15 +13,15 @@
   "invalidpath": "Недопустимый путь к странице.",
   "invaliduserid": "Недействительный идентификатор пользователя",
   "newpasswordtooshort": "Пароль слишком короткий!",
-  "notexist": "Запись {{path}}не существует!",
+  "notexist": "Запись {{path}} не существует!",
   "notexistdetail": "Вы хотите создать эту запись?",
   "parentinvalid": "Родительская запись не является допустимым файлом.",
   "parentisroot": "Родительская запись - root.",
   "remotetoolarge": "Файл слишком велик!",
-  "reservedname": "Вы не можете создать документ с этим именем, так как он зарезервирован системой.",
+  "reservedname": "Вы не можете создать документ с этим именем, так как оно зарезервировано системой.",
   "savefailed": "Не удалось сохранить документ.",
   "starterfailed": "Не удалось загрузить стартовый контент!",
-  "unauthorized": "неавторизованный ",
+  "unauthorized": "Неавторизованный ",
   "actions": {
     "create": "Создать",
     "gohome": "Перейти к Главной странице",
