Added changes in order to handle permission related with the file manager, user can only write a file/img to a folder that he was write access. Also can only delete a file from a folder if he has write permission. Can only move a file/img to a folder that he has access. And can only view the folders to which he has at least read access.

--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -98,6 +98,7 @@
     "newfoldernameplaceholder": "folder name",
     "newfoldersuccess": "New folder {{name}} created.",
     "newfoldertitle": "New Folder",
+    "nopermission": "You do not have permission for this operation!",
     "renamefile": "Rename",
     "renamefileerror": "Rename error: {{err}}",
     "renamefileinvalid": "This filename is invalid!",
