feat(admin): migrate groups dialogs to vue 3 composable

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1421,5 +1421,6 @@
   "tags.searchWithinResultsPlaceholder": "Search within results...",
   "tags.selectOneMoreTags": "Select one or more tags",
   "tags.selectOneMoreTagsHint": "Select one or more tags on the left.",
-  "admin.general.sitemapHint": "Make a sitemap.xml available to search engines with all pages accessible to guests."
+  "admin.general.sitemapHint": "Make a sitemap.xml available to search engines with all pages accessible to guests.",
+  "admin.groups.usersNone": "This group doesn't have any user yet."
 }
