feat(mail): allow setting of mailer identifying name

--- a/ux/src/i18n/locales/en.json
+++ b/ux/src/i18n/locales/en.json
@@ -1422,5 +1422,7 @@
   "tags.selectOneMoreTags": "Select one or more tags",
   "tags.selectOneMoreTagsHint": "Select one or more tags on the left.",
   "admin.general.sitemapHint": "Make a sitemap.xml available to search engines with all pages accessible to guests.",
-  "admin.groups.usersNone": "This group doesn't have any user yet."
+  "admin.groups.usersNone": "This group doesn't have any user yet.",
+  "admin.mail.smtpName": "Client Identifying Name",
+  "admin.mail.smtpNameHint": "An optional name to send to the SMTP server to identify your mailer. Leave empty to use server hostname. For Google Workspace customers, this should be your main domain name."
 }
